# bili23-downloader

./: .gitignore  CHANGELOG.md  README.md  README_en.md  conftest.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  release.yml
docs/superpowers/plans/: 2026-07-19-bili23-cli-refactor.md
docs/superpowers/specs/: 2026-07-19-bili23-cli-refactor-design.md
src/: __init__.py  main.py
src/cli/: __init__.py  app.py  callbacks.py  exceptions.py
src/cli/commands/: _shared.py  config_cmd.py  download.py  history.py  login.py  logout.py  parse.py  task.py
src/cli/interact/: episode_selector.py  qr_terminal.py  quality_selector.py
src/cli/render/: progress.py  table.py  toast.py
src/util/: __init__.py
src/util/auth/: base.py  captcha.py  cookie.py  cookie_login.py  qrcode.py  server.py  sms.py  user.py
src/util/common/: config.py  enum.py  signal_bus.py  translator.py
src/util/common/io/: directory.py  file.py
src/util/download/cover/: cache.py  db.py  manager.py  query_worker.py
src/util/download/downloader/: downloader.py  merger.py  parse_worker.py
src/util/download/parse/: audio_info.py  video_info.py
src/util/download/task/: db.py  manager.py  query_worker.py  reparse_worker.py
src/util/ffmpeg/: __init__.py  runner.py
src/util/format/: file_name.py
src/util/misc/: update.py  web.py
src/util/network/: cdn.py  proxy.py  request.py
src/util/parse/: worker.py
src/util/parse/additional/: cover.py  danmaku.py  metadata.py  subtitles.py  worker.py
src/util/parse/additional/file/: danmaku_ass.py  subtitle_ass.py
src/util/parse/episode/: base.py  dynamic.py  tree.py
src/util/parse/parser/: base.py  dynamic.py
src/util/parse/preview/: audio_info.py  video_info.py  worker.py
src/util/thread/: async_.py  pool.py  worker_base.py
tests/cli/: test_app.py  test_callbacks.py  test_config_cmd.py  test_download_cmd.py  test_end_to_end.py  test_episode_selector.py  test_exceptions.py  test_history_cmd.py  test_login_cmd.py  test_logout_cmd.py  test_main.py  test_parse_cmd.py  test_qr_terminal.py  test_quality_selector.py  test_render.py  test_task_cmd.py
tests/integration/: __init__.py  test_login_flow.py  test_parse_download.py
tests/unit/: conftest.py  test_auth_no_qt.py  test_config.py  test_config_more.py  test_cover_no_qt.py  test_cover_workers_coverage.py  test_danmaku_ass.py  test_danmaku_ass_coverage.py  test_database.py  test_directory.py  test_directory_more.py  test_download_parse_worker_coverage.py  test_downloader.py  test_downloader_coverage.py  test_episode_bangumi.py  test_episode_base.py  test_episode_cheese.py  test_episode_video.py  test_ffmpeg_command_coverage.py  test_ffmpeg_runner_coverage.py  test_file.py  test_format_file_name_coverage.py  test_format_time_coverage.py  test_format_units_coverage.py  test_gui_files_removed.py  test_init_no_qt.py  test_json.py  test_merger_coverage.py  test_misc_no_qt.py  test_misc_update_coverage.py  test_misc_web_coverage.py  test_naming_convention.py  test_network_no_qt.py  test_network_proxy_coverage.py  test_network_request_coverage.py  test_no_config_attr_access.py  test_no_gui_files.py  test_parse_additional_worker_coverage.py  test_parse_preview_worker_coverage.py  test_parse_worker_coverage.py  (+16 more)
